@@ -1,3 +1,9 @@
+Fri Apr  2 20:55:28 1999  ape@spacetec.no  (Asbjorn Pettersen)
+
+	* gnome-history.c (write_history): 
+	* gnome-mime.c (mime_fill_from_file): Open file in TEXT mode.
+	This is for the OS/2 version.
+
 1999-03-31  James Henstridge  <james@daa.com.au>
 
 	* gnome-config.c (access_config_extended): new function that checks
